--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
   ],
   "require": {
     "guzzlehttp/guzzle": "^6.3",
-    "nesbot/carbon": "^2.8"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7"
   }
 }
